<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="dashboardViewModel"
            type="dev.marcosfarias.pokedex.ui.dashboard.DashboardViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundLight"
        android:fillViewport="true"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="70dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="140dp" />

            <TextView
                android:id="@+id/label_hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_hp"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_hp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@{String.valueOf(dashboardViewModel.pokemon.hp)}"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/label_hp"
                app:layout_constraintEnd_toEndOf="@id/guideline_value"
                app:layout_constraintStart_toStartOf="@id/guideline_label"
                app:layout_constraintTop_toTopOf="@id/label_hp"
                tools:text="55" />

            <ProgressBar
                android:id="@+id/progress_hp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="4"
                android:indeterminate="false"
                android:max="100"
                android:progress="@{dashboardViewModel.pokemon.hp}"
                app:layout_constraintBottom_toBottomOf="@id/label_hp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_value"
                app:layout_constraintTop_toTopOf="@id/label_hp"
                tools:progress="43" />

            <TextView
                android:id="@+id/tv_label_attack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_attack"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_hp" />

            <TextView
                android:id="@+id/tv_attack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@{String.valueOf(dashboardViewModel.pokemon.attack)}"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_label_attack"
                app:layout_constraintEnd_toEndOf="@id/guideline_value"
                app:layout_constraintStart_toStartOf="@id/guideline_label"
                app:layout_constraintTop_toTopOf="@id/tv_label_attack"
                tools:text="55" />

            <ProgressBar
                android:id="@+id/progress_attack"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="4"
                android:indeterminate="false"
                android:max="100"
                android:progress="@{dashboardViewModel.pokemon.attack}"
                app:layout_constraintBottom_toBottomOf="@id/tv_label_attack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_value"
                app:layout_constraintTop_toTopOf="@id/tv_label_attack"
                tools:progress="43" />

            <TextView
                android:id="@+id/tv_label_defense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_defense"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_attack" />

            <TextView
                android:id="@+id/tv_defense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@{String.valueOf(dashboardViewModel.pokemon.defense)}"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_label_defense"
                app:layout_constraintEnd_toEndOf="@id/guideline_value"
                app:layout_constraintStart_toStartOf="@id/guideline_label"
                app:layout_constraintTop_toTopOf="@id/tv_label_defense"
                tools:text="55" />

            <ProgressBar
                android:id="@+id/progress_defense"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="4"
                android:indeterminate="false"
                android:max="100"
                android:progress="@{dashboardViewModel.pokemon.defense}"
                app:layout_constraintBottom_toBottomOf="@id/tv_label_defense"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_value"
                app:layout_constraintTop_toTopOf="@id/tv_label_defense"
                tools:progress="43" />

            <TextView
                android:id="@+id/tv_label_sp_atk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_sp_atk"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_defense" />

            <TextView
                android:id="@+id/tv_sp_atk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@{String.valueOf(dashboardViewModel.pokemon.specialAttack)}"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_label_sp_atk"
                app:layout_constraintEnd_toEndOf="@id/guideline_value"
                app:layout_constraintStart_toStartOf="@id/guideline_label"
                app:layout_constraintTop_toTopOf="@id/tv_label_sp_atk"
                tools:text="55" />

            <ProgressBar
                android:id="@+id/progress_sp_atk"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="4"
                android:indeterminate="false"
                android:max="100"
                android:progress="@{dashboardViewModel.pokemon.specialAttack}"
                app:layout_constraintBottom_toBottomOf="@id/tv_label_sp_atk"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_value"
                app:layout_constraintTop_toTopOf="@id/tv_label_sp_atk"
                tools:progress="43" />

            <TextView
                android:id="@+id/tv_label_sp_def"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_sp_def"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_sp_atk" />

            <TextView
                android:id="@+id/tv_sp_def"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@{String.valueOf(dashboardViewModel.pokemon.specialDefense)}"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_label_sp_def"
                app:layout_constraintEnd_toEndOf="@id/guideline_value"
                app:layout_constraintStart_toStartOf="@id/guideline_label"
                app:layout_constraintTop_toTopOf="@id/tv_label_sp_def"
                tools:text="55" />

            <ProgressBar
                android:id="@+id/progress_sp_def"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="4"
                android:indeterminate="false"
                android:max="100"
                android:progress="@{dashboardViewModel.pokemon.specialDefense}"
                app:layout_constraintBottom_toBottomOf="@id/tv_label_sp_def"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_value"
                app:layout_constraintTop_toTopOf="@id/tv_label_sp_def"
                tools:progress="43" />

            <TextView
                android:id="@+id/tv_label_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_speed"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_sp_def" />

            <TextView
                android:id="@+id/tv_speed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@{String.valueOf(dashboardViewModel.pokemon.speed)}"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_label_speed"
                app:layout_constraintEnd_toEndOf="@id/guideline_value"
                app:layout_constraintStart_toStartOf="@id/guideline_label"
                app:layout_constraintTop_toTopOf="@id/tv_label_speed"
                tools:text="55" />

            <ProgressBar
                android:id="@+id/progress_speed"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="4"
                android:indeterminate="false"
                android:max="100"
                android:progress="@{dashboardViewModel.pokemon.speed}"
                app:layout_constraintBottom_toBottomOf="@id/tv_label_speed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_value"
                app:layout_constraintTop_toTopOf="@id/tv_label_speed"
                tools:progress="43" />

            <TextView
                android:id="@+id/tv_label_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_total"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_speed" />

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@{String.valueOf(dashboardViewModel.pokemon.total)}"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_label_total"
                app:layout_constraintEnd_toEndOf="@id/guideline_value"
                app:layout_constraintStart_toStartOf="@id/guideline_label"
                app:layout_constraintTop_toTopOf="@id/tv_label_total"
                tools:text="55" />

            <ProgressBar
                android:id="@+id/progress_total"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="4"
                android:indeterminate="false"
                android:max="600"
                android:progress="@{dashboardViewModel.pokemon.total}"
                app:layout_constraintBottom_toBottomOf="@id/tv_label_total"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_value"
                app:layout_constraintTop_toTopOf="@id/tv_label_total"
                tools:progress="43" />

            <TextView
                android:id="@+id/tv_label_type_defences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_type_defences"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_total" />

            <TextView
                android:id="@+id/tv_type_defences"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:layout_weight="2"
                android:text="@{dashboardViewModel.pokemon.YDescription}"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_type_defences"
                tools:text="65" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>